--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "@types/axios": "^0.9.36",
+    "@types/express": "^5.0.0",
+    "@types/nodemailer": "^6.4.16",
+    "express": "^4.21.1",
+    "fuse.js": "^7.0.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
